--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
+    "@crello/react-lottie": "^0.0.11",
+    "framer-motion": "^3.2.2-rc.1",
+    "install": "^0.13.0",
     "next": "latest",
+    "npm": "^6.14.11",
+    "or": "^0.2.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
