--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@crello/react-lottie": "^0.0.11",
+    "@zeit/next-css": "^1.0.1",
     "framer-motion": "^3.2.2-rc.1",
+    "howler": "^2.2.1",
     "install": "^0.13.0",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
     "npm": "^6.14.11",
     "or": "^0.2.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-is": "^16.8.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "use-sound": "^2.0.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
@@ -27,7 +31,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   },
   "license": "MIT"
 }
